--- a/app/views/brakes/index.html.erb
+++ b/app/views/brakes/index.html.erb
@@ -12,20 +12,20 @@
   </thead>
   <tbody>
 
-  <%= button_to 'Get Brake Data!', '/gather_brake_data', method: :get %>
+  <%= button_to 'Get Categories!', '/gather_brake_data', method: :get %>
 
-    <% @products.each do |brake| %>
+    <% @categories.each do |category| %>
       <tr>
-        <td><%= brake.year %></td>
-        <td><%= brake.make %></td>
-        <td><%= brake.model %></td>
-        <td><%= brake.submodel %></td>
-        <td><%= link_to "Fetch products", brake_products_brake_path(brake) %></td>
+        <td><%= category.year %></td>
+        <td><%= category.make %></td>
+        <td><%= category.model %></td>
+        <td><%= category.submodel %></td>
+        <td><%= link_to "Fetch products", brake_products_brake_path(category) %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
 
- <h4> Total Products: <%= @products.size %></h4>
+ <h4> Total Products: <%= @categories.size %></h4>
 
 
