Update from Tammy

--- a/app/views/brakes/index.html.erb
+++ b/app/views/brakes/index.html.erb
@@ -12,7 +12,7 @@
   </thead>
   <tbody>
 
-  <%= button_to 'Get Categories!', '/gather_brake_data', method: :get %>
+  <%= button_to 'Get Categories!', '/gather_brake_category', method: :get %>
 
     <% @categories.each do |category| %>
       <tr>
